NNE : Minimal API - NNEQA
Problem:
* NNE API surface is large atm potentially creating a support burden and harming adoption for 5.2.

Solution:
* This CL is targeting NNEQA, removing any API from it.
* cleanup/rename module/file/classes to follow naming convention.
* bonus: update test definition so smoketest (nne.test.smoketest) are back under a minute.

Test:
* All tests green under win64 editor + style transfer demo in editor

#rb ue-nni
#preflight 63c94948d15a37ae3163ae2c

[CL 23786711 by florent guinier in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Experimental/NNE/NNE.uplugin
+++ b/Engine/Plugins/Experimental/NNE/NNE.uplugin
@@ -44,7 +44,7 @@
 			"PlatformAllowList": [ "Win64", "Linux", "Mac" ]
 		},
 		{
-			"Name": "NNXQA",
+			"Name": "NNEQA",
 			"Type": "RuntimeAndProgram",
 			"LoadingPhase": "Default",
 			"PlatformAllowList": [ "Win64", "Linux", "Mac" ]
