Add MessagingDebugger to UFE when the -DebugTools parameter is used.
#jira none
#rnx
#rb Francis.Hurteau
#preflight 63ca554b6a00f3cc8edc9bfe

[CL 23787294 by david harvey in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Messaging/MessagingDebugger/MessagingDebugger.uplugin
+++ b/Engine/Plugins/Messaging/MessagingDebugger/MessagingDebugger.uplugin
@@ -10,7 +10,10 @@
 	"Category" : "Messaging",
 	"EnabledByDefault" : false,
 	"IsBetaVersion": true,
-
+	"SupportedPrograms" : 
+	[
+		"UnrealFrontend"
+	],
 	"Modules" :
 	[
 		{
