--- a/Engine/Programs/UnrealFrontend/Config/DefaultEngine.ini
+++ b/Engine/Programs/UnrealFrontend/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameNameShort=UFE
 
 [Plugins]
-+EnabledPlugins="MessagingDebugger"
++ProgramEnabledPlugins="MessagingDebugger"
 -EnabledPlugins="ExampleDeviceProfileSelector"
 +ProgramEnabledPlugins="UdpMessaging"
 +ProgramEnabledPlugins="TcpMessaging"
