Undo CL 23787291 (add MessagingDebugger to UFE)
- need to resolve mac build errors.

#jira none
#preflight skip
#rnx
#rb trivial

[CL 23787992 by david harvey in ue5-release-engine-staging branch]

--- a/Engine/Programs/UnrealFrontend/Config/DefaultEngine.ini
+++ b/Engine/Programs/UnrealFrontend/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameNameShort=UFE
 
 [Plugins]
-+ProgramEnabledPlugins="MessagingDebugger"
++EnabledPlugins="MessagingDebugger"
 -EnabledPlugins="ExampleDeviceProfileSelector"
 +ProgramEnabledPlugins="UdpMessaging"
 +ProgramEnabledPlugins="TcpMessaging"
