Misc. cleanup for the Input Device Subsystem:
- Remove the GetPlayerControllerFromPlatformUser function from the input device subsystem in favor of using the BP library. This function hasn't been released yet so there is no need to deprecate it.
- Rename FSetDevicePropertyParams to FActivateDevicePropertyParams to be in line with the current function
- Move the IsDevicePropertyHandleValid function from the subsystem to the library.
- Update some comments and metadata on various properties and functions in the subsystem to make them more user friendly
- Move some default value initalizations from the header file to the .cpp so that we can change it in hotfixes if we need to, and so that we can make them uint8 : 1 flags instead of bools


#rb trivial
#rnx
#preflight 63cad468fa66be4cc33fd130

[CL 23794603 by ben hoffman in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1099,6 +1099,12 @@ DefaultWorldPartitionHLODLayer=/Engine/Maps/Templates/HLODs/HLODLayer_Instanced.
 
 ; 5.2
 +ClassRedirects=(OldName="/Script/Engine.PlatformInputDeviceMapperLibrary",NewName="/Script/Engine.InputDeviceLibrary")
++ClassRedirects=(OldName="/Script/Engine.PlatformInputDeviceMapperLibrary",NewName="/Script/Engine.InputDeviceLibrary")
++StructRedirects=(OldName="/Script/Engine.SetDevicePropertyParams", NewName="/Script/Engine.ActivateDevicePropertyParams")
++FunctionRedirects=(OldName="InputDeviceSubsystem.GetPlayerControllerFromInputDevice", NewName="InputDeviceLibrary.GetPlayerControllerFromInputDevice")
++FunctionRedirects=(OldName="InputDeviceSubsystem.GetPlayerControllerFromPlatformUser", NewName="InputDeviceLibrary.GetPlayerControllerFromPlatformUser")
++FunctionRedirects=(OldName="InputDeviceSubsystem.IsDevicePropertyHandleValid", NewName="InputDeviceLibrary.IsDevicePropertyHandleValid")
+
 +StructRedirects=(OldName="/Script/AssetTools.RevisionInfo", NewName="/Script/AssetDefinition.RevisionInfo")
 +PropertyRedirects=(OldName="DecalComponent.SetFadeIn.Duaration", NewName="DecalComponent.SetFadeIn.Duration")
 +PropertyRedirects=(OldName="BlendSpace.PerBoneBlend", NewName="BlendSpace.ManualPerBoneOverrides")
