ModelingMode: Add experimental support for tool presets.
* Presets exist as a new asset type, loaded under the new ToolPresets plugin, a dependency of ModelingToolsEditorMode.
* Presets consist of a nested set of maps, containing tool specific, named presets. These objects then contain copies of the tool in question properties at the time of creation, allowing the preset to later replay the settings back onto the active tool.
* Additionally, behind an experimental CVAR "modeling.EnablePresets", UX for interacting with presets within the Modeling Mode is available, allowing for selecting, saving, applying, and renaming new presets.

#rb Jimmy.Andrews, lonnie.li
#preflight 63cafd2c1835336af80be344

[CL 23798108 by nathan mitchell in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Editor/ModelingToolsEditorMode/ModelingToolsEditorMode.uplugin
+++ b/Engine/Plugins/Editor/ModelingToolsEditorMode/ModelingToolsEditorMode.uplugin
@@ -39,6 +39,11 @@
 		{
 			"Name": "StylusInput",
 			"Enabled": true
+		},
+		{
+			"Name": "ToolPresets",
+			"Enabled": true,
+			"TargetAllowList": [ "Editor" ]
 		}
 	]
 }
