Implement a way to define hierarchy between modifiers procedurally
#jira UE-174202
#rb Jason.Walter
#preflight 63cbbbedbb143672425eb9b9

[CL 23802916 by dominik peacock in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
+++ b/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
@@ -52,6 +52,22 @@
 			]
 		},
 		{
+			"Name": "VCamExtensions",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"PlatformDenyList": [
+				"TVOS"
+			]
+		},
+		{
+			"Name": "VCamExtensionsEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default",
+			"PlatformDenyList": [
+				"TVOS"
+			]
+		},
+		{
 			"Name": "VCamInput",
 			"Type": "Runtime",
 			"LoadingPhase": "PreDefault",
