NNE - Cleanup of NNERuntimeORTCpu
#preflight 63ce57f5ef20a5272d710596
#rb florent.guinier

[CL 23813952 by nico ranieri in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Experimental/NNE/NNE.uplugin
+++ b/Engine/Plugins/Experimental/NNE/NNE.uplugin
@@ -50,7 +50,7 @@
 			"PlatformAllowList": [ "Win64", "Linux", "Mac" ]
 		},
 		{
-			"Name": "NNXRuntimeCPU",
+			"Name": "NNERuntimeORTCpu",
 			"Type": "RuntimeAndProgram",
 			"LoadingPhase": "Default",
 			"PlatformAllowList": [ "Win64", "Linux", "Mac" ]
