LwsWebSocket ping pong interval from ini. #jira UE-93308 [REVIEW] [at]Bertrand.Carre [at]Michael.Kirzinger #preflight 63ce7d6bb91ac945f5f09ba1
[CL 23814233 by camillo lukesch in ue5-release-engine-staging branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -79,6 +79,7 @@ ThreadStackSize=131072
 ThreadTargetFrameTimeInSeconds=0.0333
 ThreadMinimumSleepTimeInSeconds=0.0
 MaxHttpHeaderData=32768
+PingPongInterval=0
 
 [Ping]
 StackSize=1048576
