#jira UE-173257 #preflight #rb alejandro.arango #lockdown mitchell.wilson M&E Template Projects Disabling Oculus/SteamVR plugins for OpenXR Enabling Virtual Scouting
[CL 23817720 by sam munro in ue5-release-engine-staging branch]

--- a/Templates/TP_ME_BlankBP/TP_ME_BlankBP.uproject
+++ b/Templates/TP_ME_BlankBP/TP_ME_BlankBP.uproject
@@ -5,19 +5,20 @@
 	"Description": "",
 	"Plugins": [
 		{
-			"Name": "OculusVR",
+			"Name": "OpenXR",
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
-				"Win32",
-				"Win64"
+				"Win64",
+				"Linux",
+				"Android"
 			]
 		},
 		{
-			"Name": "SteamVR",
+			"Name": "VirtualScouting",
 			"Enabled": true,
 			"SupportedTargetPlatforms": [
-				"Win32",
-				"Win64"
+				"Win64",
+				"Linux"
 			]
 		},
 		{
