Modified UnrealGameSync to support not building C++ UHT based on a setting.
#rb
#preflight 63cfe60a3a03cb0bbf59d2e7

[CL 23829771 by tim smith in ue5-release-engine-staging branch]

--- a/Engine/Programs/UnrealGameSync/UnrealGameSync.ini
+++ b/Engine/Programs/UnrealGameSync/UnrealGameSync.ini
@@ -3,6 +3,7 @@ UseFastModularVersioning=1
 UseFastModularVersioningV2=1
 UseCrashReportClientEditor=1
 DebugGameHasSeparateExecutable=1
+BuildUnrealHeaderTool=0
 +ExcludeChanges=^Rebuild lightmaps\.$
 +ExcludeChanges=^Rebuild lightmaps & texture streaming\.$
 +ExcludeChanges=^Added collection '.*'\s*
