--- a/Engine/Plugins/Experimental/CommonUI/CommonUI.uplugin
+++ b/Engine/Plugins/Experimental/CommonUI/CommonUI.uplugin
@@ -37,6 +37,10 @@
 		{
 			"Name": "GameplayTagsEditor",
 			"Enabled": true
+		},
+		{
+			"Name": "EnhancedInput",
+			"Enabled": true
 		}
 	]
 }
