Added cache track api to Niagara cache tracks to allow re-caching them from sequencer.
#jira UE-174983
#rb frankl.fella, max.chen
#preflight 63ceedc4ef20a5272dbe052d

[CL 23841073 by michael galetzka in ue5-release-engine-staging branch]

--- a/Engine/Plugins/VirtualProduction/Takes/Takes.uplugin
+++ b/Engine/Plugins/VirtualProduction/Takes/Takes.uplugin
@@ -51,6 +51,11 @@
 			"Name": "TakeSequencer",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "CacheTrackRecorder",
+			"Type": "UncookedOnly",
+			"LoadingPhase": "PostDefault"
 		}
 	]
 }
