--- a/Engine/Plugins/Experimental/AVCodecs/AVCodecsCore/AVCodecsCore.uplugin
+++ b/Engine/Plugins/Experimental/AVCodecs/AVCodecsCore/AVCodecsCore.uplugin
@@ -17,7 +17,8 @@
 		{
 			"Name": "AVCodecsCore",
 			"Type": "Runtime",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+			"PlatformAllowList": [ "Win64",	"Linux" ]
 		},
 		{
 			"Name": "AVCodecsCoreRHI",
@@ -25,7 +26,8 @@
 			"LoadingPhase": "PostConfigInit",
 			"TargetDenyList": [
 				"Program"
-			]
+			],
+			"PlatformAllowList": [ "Win64",	"Linux"	]
 		}
 	],
 	"SupportedTargetPlatforms": [
