USD: Global USD Asset Cache.
#jira UE-169183
#rb Anousack.Kitisa
#preflight 63d13253976daa618c46ea7b

[CL 23846920 by daniel coelho in ue5-release-engine-staging branch]

--- a/Engine/Plugins/Importers/USDImporter/USDImporter.uplugin
+++ b/Engine/Plugins/Importers/USDImporter/USDImporter.uplugin
@@ -63,6 +63,11 @@
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		},
+        {
+			"Name": "USDClassesEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
+		},
 		{
 			"Name": "GeometryCacheUSD",
 			"Type": "Editor",
