Fix up crash reporter config-var project overrides not working
#jira UE-72636, UE-168302
#rb brandon.schaefer, josh.adams
#preflight 63d2d7fd31334253e56188c8

[CL 23910227 by jessica agee in 5.2 branch]

--- a/Engine/Config/Linux/BaseLinuxEngine.ini
+++ b/Engine/Config/Linux/BaseLinuxEngine.ini
@@ -6,3 +6,6 @@ UnrealBuildTool=Engine/Build/BatchFiles/Linux/Build.sh
 
 [OnlineServices.EOS.Auth]
 DefaultExternalCredentialTypeStr=Steam
+
+[CrashReportClient]
+bAgreeToCrashUpload=false
