--- a/Samples/Games/Lyra/Config/DefaultEngine.ini
+++ b/Samples/Games/Lyra/Config/DefaultEngine.ini
@@ -387,3 +387,5 @@ ManualIPAddress=
 [Internationalization]
 +LocalizationPaths=%GAMEDIR%Content/Localization/EngineOverrides
 
+[CrashReportClient]
+bAgreeToCrashUpload=true
