Enabling tvOS support for Electra #jira UE-175559 #rb none #fyi jens.petersam #preflight 63d839ef5d0c0164cc893ff3 #lockdown jessi.agee
[CL 23917617 by Thomas Engel in 5.2 branch]

--- a/Engine/Plugins/Media/ElectraCDM/ElectraCDM.uplugin
+++ b/Engine/Plugins/Media/ElectraCDM/ElectraCDM.uplugin
@@ -19,7 +19,7 @@
 			"Name": "ElectraCDM",
 			"Type": "RuntimeNoCommandlet",
 			"LoadingPhase": "PostEngineInit",
-			"PlatformAllowList": [ "Win64", "Mac", "IOS", "Android", "Linux" ],
+			"PlatformAllowList": [ "Win64", "Mac", "IOS", "TVOS", "Android", "Linux" ],
 			"TargetDenyList": [ "Server" ]
 		},
 	]
