--- a/Engine/Plugins/Experimental/ScriptableToolsFramework/ScriptableToolsFramework.uplugin
+++ b/Engine/Plugins/Experimental/ScriptableToolsFramework/ScriptableToolsFramework.uplugin
@@ -17,7 +17,7 @@
 		{
 			"Name": "ScriptableToolsFramework",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "PreDefault"
 		},
 		{
 			"Name": "EditorScriptableToolsFramework",
