Cleanup beta tags, versions, and descriptions of gameplay plugins to better match the actual state #jira UE-166520 #preflight 63daf3d9cf529681173b401b #rb julien.marchand #lockdown julien.marchand
[CL 23972735 by ben zeigler in 5.2 branch]

--- a/Engine/Plugins/Experimental/AbilitySystemGameFeatureActions/AbilitySystemGameFeatureActions.uplugin
+++ b/Engine/Plugins/Experimental/AbilitySystemGameFeatureActions/AbilitySystemGameFeatureActions.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "0.1",
-	"FriendlyName": "Ability System Game Feature Actions",
-	"Description": "Ability System Game Feature Actions",
+	"FriendlyName": "Gameplay Abilities Game Feature Actions",
+	"Description": "Game feature actions to support modular use of the gameplay abilities system",
 	"Category": "Gameplay",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "https://epicgames.com",
@@ -12,7 +12,7 @@
 	"SupportURL": "",
 	"EnabledByDefault": false,
 	"CanContainContent": false,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
 	"Installed": false,
 	"Modules": [
 		{
