--- a/Engine/Plugins/Experimental/GameFeatures/GameFeatures.uplugin
+++ b/Engine/Plugins/Experimental/GameFeatures/GameFeatures.uplugin
@@ -1,7 +1,7 @@
 {
 	"FileVersion": 3,
 	"Version": 1,
-	"VersionName": "0.1",
+	"VersionName": "1.0",
 	"FriendlyName": "Game Features",
 	"Description": "Support for modular Game Feature Plugins",
 	"Category": "Gameplay",
@@ -12,7 +12,7 @@
 	"SupportURL": "",
 	"EnabledByDefault": false,
 	"CanContainContent": false,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
 	"Installed": false,
 	"Modules": [
 		{
