--- a/Engine/Plugins/Experimental/ModularGameplay/ModularGameplay.uplugin
+++ b/Engine/Plugins/Experimental/ModularGameplay/ModularGameplay.uplugin
@@ -3,7 +3,7 @@
 	"Version": 1,
 	"VersionName": "1.0",
 	"FriendlyName": "Modular Gameplay",
-	"Description": "",
+	"Description": "Base classes and subsystems to support modular use of the gameplay framework",
 	"Category": "Gameplay",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "https://epicgames.com",
@@ -12,7 +12,7 @@
 	"SupportURL": "",
 	"EnabledByDefault": false,
 	"CanContainContent": false,
-	"IsBetaVersion": false,
+	"IsBetaVersion": true,
 	"Installed": false,
 	"Modules": [
 		{
