Fix Find/Join session using OSSNull on Android.
In order to use multicast communication or broadcasts Android applications need the CHANGE_WIFI_MULTICAST_STATE permission and acquiring a WifiManager.MulticastLock

#jira UE-165411
[REVIEW] [at]Bertrand.Carre, [at]Chris.Varnsverry, [at]Chris.Babcock, [at]Jack.Porter
#preflight 63e363beb923ed4bdd350643

[CL 24074164 by Rafa Lecina in 5.2 branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2813,6 +2813,7 @@ bDisableLibCppSharedDependencyValidation=False
 bDisableFunctionDataSections=False
 bEnableAdvancedBinaryCompression=False
 bDisableStackProtector=False
+bEnableMulticastSupport=False
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKAPILevel=latest
