Rivermax / 2110 - low latency improvements
- Rivermax player now leverages the just in time pipeline to achieve low latency. Framelock and latest modes are supported.
- Rivermax capture now supports frame cration alignment to be able to send out frames as soon as they are created
- Updating library to rivermax 1.20
- Adding support for rivermax to use system time as its clock
- Fixed support for wildcards to include ?

#rb alejandro.arango
#jira UE-170787, UE-166129, UE-174822
#preflight 63e4fcfcb923ed4bdd5fa33a
#lockdown alejandro.arango

[CL 24097343 by Simon Therriault in 5.2 branch]

--- a/Engine/Plugins/VirtualProduction/Rivermax/RivermaxMedia/RivermaxMedia.uplugin
+++ b/Engine/Plugins/VirtualProduction/Rivermax/RivermaxMedia/RivermaxMedia.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "Rivermax Media",
-	"Description": "Adding Rivermax capabilities for Media Captures and Media Players",
+	"FriendlyName": "NVIDIA Rivermax Media Streaming",
+	"Description": "Adding NVIDIA Rivermax capabilities for Media Captures and Media Players",
 	"Category": "Virtual Production",
 	"CreatedBy": "Epic Games, Inc.",
 	"CreatedByURL": "https://epicgames.com",
