Initial checking of SplineModifier using CineCameraRigRail #jira UE-167294, UE-171791 #rb none #preflight 63e6e4c9211c20974f0be04a #fyi Thomas.Kilkenny #lockdown Alejandro.Arango
[CL 24133102 by Takashi Kuribayashi in 5.2 branch]

--- a/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
+++ b/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
@@ -26,6 +26,10 @@
 		{
 			"Name" : "VirtualCameraCore",
 			"Enabled": true
+		},
+		{
+			"Name" : "CineCameraRigs",
+			"Enabled": true
 		}
 	]
 }
