Fix DXC/SPIR-V bug with empty structs and re-enable Nanite for Vulkan. Several PRs have been filed on GitHub for DXC (PR 5017, PR 5020) and SPIRV-Tools (PR 5107). Integrated from CL 23998474.
Workaround for DXC rewriter bug: Have member function definition inside struct declaration.
Integrated from CL 23976367.

Explicitly initialize TNaniteWritePixel members as empty structs expose further bugs in SPIR-V backend of DXC.

Rebuild ShaderConductor for Win64, Mac, and Linux (Empty struct fix).

#rb Jason.Nadro, JeanNoe.Morissette, Carl.Lloyd
#fyi Brian.Karis, Graham.Wihlidal, Rune.Stubbe
#jira UE-175538, UE-172568
#preflight 63eae0eab91ae11c1ceceed2
#rnx

[CL 24210530 by Laura Hermanns in 5.2 branch]

--- a/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
@@ -63,7 +63,7 @@ bSupportsUInt64ImageAtomics = true
 ; //#todo-vulkanddpi
 bRequiresVendorExtensionsForAtomics = false
 
-bSupportsNanite = false
+bSupportsNanite = true
 bSupportsSceneDataCompressedTransforms = true
 bSupportsLumenGI = true
 
