Rename "Max World Position Offset Distance" to "Max World Position Offset Displacement" to avoid confusing it with "World Position Offset Disable Distance"
#rb kevin.ortegren
#jira UE-178135
#rnx
#preflight 63f4f76d977ceed915cb3d5b

[CL 24360676 by jamie hayes in 5.2 branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1125,7 +1125,11 @@ DefaultWorldPartitionHLODLayer=/Engine/Maps/Templates/HLODs/HLODLayer_Instanced.
 
 +PropertyRedirects=(OldName="KismetSystemLibrary.MakeTopLevelAssetPath.FullPathOrPackageName", NewName="KismetSystemLibrary.MakeTopLevelAssetPath.PackageName")
 +PropertyRedirects=(OldName="/Script/NavigationSystem.NavigationSystemV1.GeometryExportVertexCountWarningThreshold",NewName="/Script/NavigationSystem.NavigationSystemV1.GeometryExportTriangleCountWarningThreshold")
-+PropertyRedirects=(OldName="FISMComponentDescriptor.bIsLocalToWorldDeterminantNegative", NewName="FISMComponentDescriptor.bReverseCulling")
++PropertyRedirects=(OldName="ISMComponentDescriptor.bIsLocalToWorldDeterminantNegative", NewName="ISMComponentDescriptor.bReverseCulling")
+
++PropertyRedirects=(OldName="MaterialInstanceBasePropertyOverrides.MaxWorldPositionOffsetDistance", NewName="MaterialInstanceBasePropertyOverrides.MaxWorldPositionOffsetDisplacement")
++PropertyRedirects=(OldName="MaterialInstanceBasePropertyOverrides.bOverride_MaxWorldPositionOffsetDistance", NewName="MaterialInstanceBasePropertyOverrides.bOverride_MaxWorldPositionOffsetDisplacement")
++PropertyRedirects=(OldName="Material.MaxWorldPositionOffsetDistance", NewName="Material.MaxWorldPositionOffsetDisplacement")
 
 [CoreUObject.Metadata]
 ; Note: UnrealHeaderTool should be rerun after making changes to MetadataRedirects to catch any keys specified in class headers
