Disable bitcode by default due to Apple's removal of bitcode support for Shipping builds being uploaded to the AppStore.  As per Apple's Xcode14 Release Notes: "The capability to build with bitcode will be removed in a future Xcode release. IPAs that contain bitcode will have the bitcode stripped before being submitted to the App Store."
#jira UE-179964
#rb
#review
#preflight None for a Shipping ini change
#lockdown jack.porter

[CL 24667580 by adam kinge in 5.2 branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2706,7 +2706,7 @@ bSupportsLandscapeRightOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 bSupportsMetal=True
 bSupportsMetalMRT=False
-bShipForBitcode=True
+bShipForBitcode=False
 bGameSupportsMultipleActiveControllers=False
 bAllowRemoteRotation=True
 bUseAbsoluteDpadValues=False
